# coomer

./: .gitignore  AGENTS.md  Cargo.toml  README.md  UBIQUITOUS_LANGUAGE.md
docs/: SCREEN_SHARE_VALIDATION.md
packaging/: Info.plist
raycast/: README.md  coomer.sh
scripts/: package-app.sh
src/: app.rs  capture.rs  hud.rs  input.rs  lib.rs  main.rs  overlay.rs  permissions.rs  render.rs
