[package]
name = "coomer"
version = "0.1.0"
edition = "2024"
description = "Frozen full-screen zoom overlay for macOS"

[dependencies]
block2 = "0.6.2"
core-graphics = "0.25.0"
foreign-types = "0.5.0"
libc = "0.2"
objc2 = "0.6.4"
objc2-core-foundation = "0.3.2"
objc2-core-graphics = { version = "0.3.2", features = [
    "CGContext",
    "CGGeometry",
    "CGImage",
    "objc2",
] }
objc2-foundation = { version = "0.3.2", features = [
    "NSArray",
    "NSDate",
    "NSDictionary",
    "NSGeometry",
    "NSObjCRuntime",
    "NSObject",
    "NSString",
    "NSTimer",
    "NSValue",
    "block2",
] }
objc2-app-kit = { version = "0.3.2", features = [
    "NSAlert",
    "NSApplication",
    "NSButton",
    "NSColor",
    "NSControl",
    "NSCursor",
    "NSEvent",
    "NSGraphics",
    "NSGraphicsContext",
    "NSImage",
    "NSResponder",
    "NSRunningApplication",
    "NSScreen",
    "NSView",
    "NSWindow",
    "bitflags",
    "objc2-core-graphics",
] }
